        
    (b) (?+n) is also a relative subroutine call; it refers to the nth next
        to be opened parentheses.     
        
    (c) Conditions that refer to capturing parentheses can be specified 
        relatively, for example, (?(-2)... or (?(+3)...
        
    (d) \K resets the start of the current match so that everything before
        is not part of it.  
        
 7. Added two new calls to pcre_fullinfo(): PCRE_INFO_OKPARTIAL and 
    PCRE_INFO_JCHANGED. 
    
 8. A pattern such as  (.*(.)?)*  caused pcre_exec() to fail by either not 
    terminating or by crashing. Diagnosed by Viktor Griph; it was in the code 
    for detecting groups that can match an empty string.


Version 7.1 24-Apr-07
---------------------

 1. Applied Bob Rossi and Daniel G's patches to convert the build system to one
    that is more "standard", making use of automake and other Autotools. There
    is some re-arrangement of the files and adjustment of comments consequent
    on this.

 2. Part of the patch fixed a problem with the pcregrep tests. The test of -r
    for recursive directory scanning broke on some systems because the files
    are not scanned in any specific order and on different systems the order
    was different. A call to "sort" has been inserted into RunGrepTest for the
    approprate test as a short-term fix. In the longer term there may be an
    alternative.

 3. I had an email from Eric Raymond about problems translating some of PCRE's
    man pages to HTML (despite the fact that I distribute HTML pages, some
    people do their own conversions for various reasons). The problems
    concerned the use of low-level troff macros .br and .in. I have therefore
    removed all such uses from the man pages (some were redundant, some could
    be replaced by .nf/.fi pairs). The 132html script that I use to generate
    HTML has been updated to handle .nf/.fi and to complain if it encounters
    .br or .in.
